--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 		</ul>
 		<h2>Youtube Video Link: <a href="https://youtu.be/yEU31KF3r_k">Our Presentaton Video</a>
 		</h2>
-        <h2>Github Repo Link: <a href="https://github.com/SamiAhmed007/WebProgramming_Project-2"> Github Repo Link</a>
+        <h2>Github Repo Link: <a href="https://github.com/SamiAhmed007/Home-Hive"> Github Repo Link</a>
 		</h2>
-		<h2>Github Host Link: <a href="https://samiahmed007.github.io/WebProgramming_Project-2/"> Github Host Link</a>
+		<h2>Github Host Link: <a href="https://samiahmed007.github.io/Home-Hive/"> Github Host Link</a>
 		</h2>
 		<h2>Powerpoint Presentation: <a href="https://docs.google.com/presentation/d/1J2XSjSWlRAIbONbW3PQnNAH91NJEbP22/edit?usp=sharing&ouid=116238372080305490858&rtpof=true&sd=true"> Web Programming Presentation</a>
 		</h2>
